:memo: update swagger docs
